# QMLProject-

./: README.md
Footer_task/: CMakeLists.txt  main.cpp  main.qml
prev_next_task/: CMakeLists.txt  Page1.qml  Page2.qml  Page3.qml  Page4.qml  Page5.qml  main.cpp  main.qml
reactangle/: CMakeLists.txt  main.cpp  main.qml
rectangle-anchor/bug_138500/: CMakeLists.txt  MyButton.qml  main.cpp
rectangle-anchor/rectangle-anchor/: CMakeLists.txt  main.cpp  main.qml
rectangle_circle_task/: main.cpp  main.qml
task_qmltypes/: CMakeLists.txt  main.cpp  main.qml
